2004-11-30  Neal H. Walfield  <neal@gnu.org>

	* cap-server.h: Improve comments.
	(hurd_cap_class_create_untyped): Tighten alignment restrictions:
	ALIGNMENT must be a power of 2.
	* class-init.c (hurd_cap_class_init_untyped): Calculate best
	alignment.

	* cap-server.h (hurd_cap_obj_get_size): Renamed to ...
	(hurd_cap_obj_user_offset): ... this.
	(hurd_cap_obj_to_user_untyped): Call hurd_cap_obj_user_offset, not
	hurd_cap_obj_get_size.
	(hurd_cap_obj_from_user_untyped): Likewise.
	* class-init.c (hurd_cap_class_init_untyped): Likewise.
	
	* class-create.c: Improve comments.
	* obj-copy-out.c: Likewise.

2004-11-30  Neal H. Walfield  <neal@gnu.org>

	* cap-server-intern.h (_hurd_cap_obj_drop): Reverse faulty logic.

2004-11-30  Neal H. Walfield  <neal@gnu.org>

	* bucket-manage-mt.c (manage_mt_get_next_worker): If
	pthread_create_from_l4_tid_np fails, return WORKER to pthread's
	available thread pool.
	(worker_alloc_async): Likewise.
	(hurd_cap_bucket_manage_mt): Likewise.

2004-11-30  Neal H. Walfield  <neal@gnu.org>

	* bucket-manage-mt.c: Include <compiler.h>.
	(manage_mt_worker): Use EXPECT_TRUE and EXPECT_FALSE rather than
	__builtin_expect.  Comment fixes.
	(manage_mt_get_next_worker): Likewise.
	(hurd_cap_bucket_manage_mt): Likewise.
	* cap-server-intern.h: Include <compiler.h>.
	(_hurd_cap_obj_drop): Use EXPECT_FALSE rather than
	__builtin_expect.
	(struct _hurd_cap_bucket): Comment fix.
	* client-release.c: Include <compiler.h>.
	(_hurd_cap_client_release): Use EXPECT_TRUE rather than
	__builtin_expect.

2004-11-30  Neal H. Walfield  <neal@gnu.org>

	* bucket-create.c (_hurd_cap_client_death): Comparisons use ==,
	not =.  Fix it.

2004-11-29  Neal H. Walfield  <neal@gnu.org>

	* client-create.c (_hurd_cap_client_create): Deallocate the
	gratuitous _hurd_cap_client_t, not the one we want to use.

2004-11-01  Marcus Brinkmann  <marcus@gnu.org>

	* cap-server.h (hurd_cap_class_create): Rename to ...
	(hurd_cap_class_create_untyped): ... this.