@@ -1,3 +1,9 @@
+2004-12-01  Marcus Brinkmann  <marcus@gnu.org>
+
+	* bucket-manage-mt.c (manage_demuxer): Rework the logic that tries
+	to wait until the client becomes inhibited.
+	Reported by Neal Walfield <neal@gnu.org>.
+
 2004-11-30  Neal H. Walfield  <neal@gnu.org>
 
 	* cap-server.h: Improve comments.
